fatal_summary.txt

> error[E0432]: unresolved import `crate::openracing_errors`
    --> crates\engine\src\hid\windows.rs:17:38
     |
  17 | use crate::{DeviceEvent, DeviceInfo, openracing_errors::RTResult, TelemetryData};
     |                                      ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
  
> error[E0433]: cannot find `openracing_errors` in `crate`
     --> crates\engine\src\hid\windows.rs:238:43
      |
  238 |                         return Err(crate::openracing_errors::RTError::TimingViolation);
      |                                           ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
      |
  help: consider importing one of these enums
      |
   11 + use crate::RTError;
      |
   11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
     --> crates\engine\src\hid\windows.rs:251:36
      |
  251 |                         Err(crate::openracing_errors::RTError::DeviceDisconnected)
      |                                    ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
      |
  help: consider importing one of these enums
      |
   11 + use crate::RTError;
      |
   11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
     --> crates\engine\src\hid\windows.rs:253:36
      |
  253 |                         Err(crate::openracing_errors::RTError::PipelineFault)
      |                                    ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
      |
  help: consider importing one of these enums
      |
   11 + use crate::RTError;
      |
   11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2561:31
       |
  2561 |             return Err(crate::openracing_errors::RTError::PipelineFault);
       |                               ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2566:31
       |
  2566 |             return Err(crate::openracing_errors::RTError::DeviceDisconnected);
       |                               ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2586:39
       |
  2586 |                     return Err(crate::openracing_errors::RTError::TimingViolation);
       |                                       ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2642:36
       |
  2642 |                         Err(crate::openracing_errors::RTError::DeviceDisconnected)
       |                                    ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2644:36
       |
  2644 |                         Err(crate::openracing_errors::RTError::PipelineFault)
       |                                    ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;
> error[E0433]: cannot find `openracing_errors` in `crate`
      --> crates\engine\src\hid\windows.rs:2687:31
       |
  2687 |             return Err(crate::openracing_errors::RTError::DeviceDisconnected);
       |                               ^^^^^^^^^^^^^^^^^ could not find `openracing_errors` in the crate root
       |
  help: consider importing one of these enums
       |
    11 + use crate::RTError;
       |
    11 + use openracing_errors::RTError;

